[tool.poetry]
name = "face-reg"
version = "0.1.0"
description = ""
authors = ["Justin TM <justin.nguyen@themission.co.uk>"]
readme = "README.md"
packages = [{include = "face_reg"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0.74"
numpy = "^1.25.2"
cmake = "^3.27.0"
dlib = {path = "E:/Projects/Python/camera_face_trackers/dlib/dlib-19.22.99-cp310-cp310-win_amd64.whl"}
face-recognition = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
